Add core.autocrlf=true to git config (Windows :()

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -34,6 +34,8 @@
   excludesfile = '~/.gitignore'
   # warn about trailing whitespace
   whitespace = trailing-space,space-before-tab,indent-with-non-tab
+  # don't get confused about different lineendings
+  autocrlf = true
 
 [alias]
   hide = update-index --assume-unchanged
