Change behavior when no git name and email is set
It might be desirable to do not specify the git email and username
globally. This should be reflected in this script.

Added a line to prevent git from guessing the email and name based on
the system if it is not specified.

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -1,6 +1,11 @@
 [user]
+{% if git_email is defined and git_email != "" %}
   email = {{ git_email }}
   name = {{ git_name }}
+{% endif %}
+  # Prevent git from guessing the user name and email
+  # This prevents any command needing this information from running
+  useConfigOnly = true
 
 [commit]
   template= ~/.gitfiles/COMMIT_EDITMSG
