Fix git handling of crlf
Force git to check out files into lf and don't get confused about crlf
if a windows file comes along. For documentation please refer to
https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration#_formatting_and_whitespace

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -39,8 +39,8 @@
   excludesfile = '~/.gitignore'
   # warn about trailing whitespace
   whitespace = trailing-space,space-before-tab,indent-with-non-tab
-  # don't get confused about different lineendings
-  autocrlf = true
+  # don't get confused about different lineendings. But still checkout to unix lineendings
+  autocrlf = input
 
 [alias]
   hide = update-index --assume-unchanged
